--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,12 +8,12 @@
     tools:context=".ui.view.MainActivity">
 
     <EditText
-        android:id="@+id/et_email"
+        android:id="@+id/et_login"
         android:layout_width="332dp"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="145dp"
-        android:hint="email"
+        android:hint="логин"
         android:inputType="textEmailAddress"
         android:padding="10dp"
         android:textSize="20dp" />
@@ -22,9 +22,9 @@
         android:id="@+id/et_password"
         android:layout_width="332dp"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/et_email"
+        android:layout_below="@+id/et_login"
         android:layout_centerHorizontal="true"
-        android:hint="password"
+        android:hint="пароль"
         android:inputType="textPassword"
         android:padding="10dp"
         android:textSize="20dp" />
@@ -46,13 +46,13 @@
             android:layout_weight="1"
             android:text="Авторизация" />
 
-        <Button
-            style="@style/Widget.AppCompat.Button.Colored"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:text="Регистрация"
-            android:id="@+id/btn_registration"/>
+<!--        <Button-->
+<!--            style="@style/Widget.AppCompat.Button.Colored"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="match_parent"-->
+<!--            android:layout_weight="1"-->
+<!--            android:text="Регистрация"-->
+<!--            android:id="@+id/btn_registration"/>-->
 
     </LinearLayout>
 
